--- a/src/containers/login/LoginContainer.scss
+++ b/src/containers/login/LoginContainer.scss
@@ -1,14 +1,3 @@
-.main-login-box {
-  background-color: blue;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  // justify-content: center;
-}
-.login-form {
-  margin: auto;
-}
-.login-heading {
-}
-.form-control {
+.MuiGridContainer {
+  background-color: aqua;
 }
